# recipe-agent

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.devcontainer/: Dockerfile
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/recipe_agent/: sample_library.hpp
include/recipe_agent/indigents/: indigent.h  indigent_manager.h
include/recipe_agent/recipe_db/: recipe_db.h
include/recipe_agent/tui/: tui.h
src/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/indigents/: CMakeLists.txt  indigent.cpp  indigent_manager.cpp
src/recipe_db/: CMakeLists.txt  recipe_db.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/tui/: CMakeLists.txt  tui.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
